[build-system]
requires = ["setuptools >= 43", "wheel", "setuptools_scm[toml] >= 3.4"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = [
    "*/setup.py",
    "*/__main__.py",
    "*/test_*",
    "*/build/*",
    "*/dist/*",
    "*/resources/*",
    "*/.tox/*",
    "*/.egg/*",
]

[tool.coverage.report]
exclude_lines = [
    "@(abc.)?abstract*",
    "except ImportError(.*):",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pragma: no cover",
]

[tool.mypy]
ignore_missing_imports = true
strict = true
show_error_codes = true

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "fixme",
    "import-error",
    # need to finish adding docs...
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-statements",
    "unspecified-encoding",
]

[tool.pylint.typecheck]
ignored-modules = ["pytest"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
log_level = "DEBUG"

[tool.ruff]
fix = true
target-version = "py38"

[tool.ruff.lint]
select = [
    # flake8-comprehensions
    "C4",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # Flynt
    "FLY",
    # isort
    "I",
    # Perflint
    "PERF",
    # Ruff-specific rules
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # pyupgrade
    "UP",
    # pycodestyle
    "W",
]
ignore = ["SIM117"]

[tool.setuptools_scm]
